fixed jwt auth token signing issue & error handling for unauthorised access